--- a/PeterGardinerAssignment4/Views/Home/SuggestionList.cshtml
+++ b/PeterGardinerAssignment4/Views/Home/SuggestionList.cshtml
@@ -19,7 +19,7 @@
                     <tr>
                         <td>@x.Name</td>
                         <td>@x.RName</td>
-                        <td>@x.FavDish</td>
+                        <td>@x.FavDish</td>*
                         <td>@x.PhoneNumber</td>
                     </tr>
             }
